# keepa-amazon

./: .gitignore  Amazon_keepa_modeling.ipynb  env.example
asins_fetch_via_scraping/: fetch_asins_all_domain_scraping.py  json_edit.py
asins_fetch_via_scraping/asin_output_scraping/: all_domains_top_asins.json
fetch_asins_via_keepa/: asin_results_amazon_us.json  dummy_asin.json  fetch_asins_all_domain_keepa.py  test_asin_fetch.py
fetch_prices/: amazon_keepa_prices_20250619.csv  daily_amazon_keepa_price_fetch.py  daily_amazon_keepa_price_fetch_monitor.py  fetch_prices.py  test_asin_price.py
pipeline/: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
pipeline/pipeline/: __init__.py  app.py  config.py  streaming_daily_pipeline.py
pipeline/scripts/: deploy.sh  optimized_daily_pipeline.py  schedule_keepa_sync.sh  test_container.sh  trigger_pipeline.sh
pipeline/tests/: conftest.py  test_app.py  test_config.py  test_integration.py  test_streaming_pipeline.py
